# Seismic_Classification

./: .gitignore  001_SOM_seis-sculpt_BryneFm_0307.ipynb  001_load_Petrel_seismic_attribute_segys.ipynb  001_merge_attribute_volumes.ipynb  001_seismic_masking.ipynb  002_well_eei_comparison.ipynb  CLAUDE.md  code_review.md  environment.yml  pyproject.toml  seismic_facies_classification.ipynb
